Fixes {bz: 1944}. Looks like a good IE7 bug workaround.
By flip-floping the "zoom" property of iframe body object, the content is reflowed and
eliminates horizontal scrollbar.

--- a/nlw/share/skin/s3/css/wikiwyg.css
+++ b/nlw/share/skin/s3/css/wikiwyg.css
@@ -2,6 +2,7 @@ body {
     text-align: left;
     background: none;
     background-color: #FFFFDD;
+    zoom: 1;
 }
 
 body.wiki {
